nothing visible just fixed excess code

--- a/MixtapeMatcher/bin/application/application.css
+++ b/MixtapeMatcher/bin/application/application.css
@@ -22,8 +22,3 @@
 	-fx-font-size: 50.0;
 	-fx-font-weight: bold;
 }
-
-.dialog-pane{
-	-fx-background-color: #777777;
-	-fx-text-fill: aliceblue;
-}
